# vx-cmake-template

./: .clang-format  .coverage  .gitignore  CMakeLists.txt  GitVersion.cmake  LICENSE  README.md  cleanup.sh  coverage.info  main.cpp  main_gtest.cpp  main_test.cpp  prepare_build.sh  prepare_dep.sh  rename_project.sh  run-coverage  stdafx.h  vx-cmake-template.description.txt  vx-cmake-template.kdev4
gtest/: SimpleTest.cpp
lib/: CMakeLists.txt
src/: Sample.cpp  Sample.h  Template.cpp  Template.h
test/: MainTest.cpp  MainTest.h
